; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_homedir.c_homedir.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_homedir.c_homedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"CURL_HOME\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @homedir() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i32, i32* @FALSE, align 4
  %4 = call i8* @GetEnv(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %3)
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i8*, i8** %2, align 8
  store i8* %8, i8** %1, align 8
  br label %18

9:                                                ; preds = %0
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i8* @GetEnv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  store i8* %11, i8** %2, align 8
  %12 = load i8*, i8** %2, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i8*, i8** %2, align 8
  store i8* %15, i8** %1, align 8
  br label %18

16:                                               ; preds = %9
  %17 = load i8*, i8** %2, align 8
  store i8* %17, i8** %1, align 8
  br label %18

18:                                               ; preds = %16, %14, %7
  %19 = load i8*, i8** %1, align 8
  ret i8* %19
}

declare dso_local i8* @GetEnv(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
